# mathlab-1-gauss

./: CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixWithGauss.cpp  MatrixWithGauss.h  Row.cpp  Row.h  main.cpp
